...
    <string name="run_zipsigner">Signing APK with a debug certificate…</string>
    <string name="run_sketch">Running the sketch…</string>

    <string-array name="empty"></string-array>

    <string name="title_activity_permissions">Sketch Permissions</string>
    <string name="create">Create</string>
    <string name="custom_perm">Custom Permission</string>
    <string name="build_failed">Build failed, check the console for more information.</string>
    <string name="build_halted">Build stopped before sketch was launched.</string>
    <string name="chooser_label">Select File</string>
    <string name="drawer_list_title_examples">Examples</string>
    <string name="auto_formatter_complete">Auto Format Completed</string>
...
    <string name="invalid_name_sketch_first_char">Sketch names must not start with a number or an underscore!</string>
    <string name="invalid_name_sketch_sketch">Sketch name must not be \&quot;sketch\&quot;!</string>
    <string name="invalid_name_sketch_invalid_char">Sketch names may contain only letters, numbers, and underscores!</string>
    <string name="cannot_create_new_folder_title">Cannot Create New Folder</string>
    <string name="export_eclipse_project">Export Eclipse Project</string>
    <string name="export_eclipse_project_complete">The Eclipse project has been exported.</string>
    <string name="export_signed_package">Export Signed Package</string>
    <string name="keystore_file">Keystore</string>
    <string name="keystore_file_select">Select Keystore File</string>
    <string name="keystore_new">Create Keystore</string>
    <string name="keystore_password">Keystore Password</string>
    <string name="alias">Key Alias</string>
    <string name="alias_new">Create Key</string>
    <string name="export">Export</string>
    <string name="alias_password">Key Password</string>
    <string name="no_aliases">Alias (Keystore empty)</string>
    <string name="keystore_password_confirm">Comfirm Keystore Password</string>
    <string name="alias_password_confirm">Confirm Key Password</string>
    <string name="certificate_validity">Validity (years):</string>
    <string name="certificate_name">First and Last Name:</string>
    <string name="certificate_organizational_unit">Organizational Unit:</string>
...
