<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_alias"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <EditText
            android:id="@+id/create_alias_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:hint="@string/export_signed_package_key_alias"
            android:inputType="text" />
        
        <EditText
            android:id="@+id/create_alias_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/export_signed_package_key_alias_password"
            android:inputType="textPassword" />
        
        <EditText
            android:id="@+id/create_alias_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/export_signed_package_key_alias_password_confirm"
            android:inputType="textPassword" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_signed_package_certificate_validity" />
            
            <EditText
                android:id="@+id/create_alias_validity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:inputType="number"
                android:text="@string/export_signed_package_certificate_validity_default" />
        </LinearLayout>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:shrinkColumns="1"
            android:stretchColumns="1" >
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_signed_package_certificate_name" />
                
                <EditText
                    android:id="@+id/create_alias_certificate_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:inputType="text" />
            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_signed_package_certificate_organizational_unit" />
                
                <EditText
                    android:id="@+id/create_alias_certificate_organizational_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:inputType="text" />
            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_signed_package_certificate_organization" />
                
                <EditText
                    android:id="@+id/create_alias_certificate_organization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:inputType="text" />
            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_signed_package_certificate_city" />
                
                <EditText
                    android:id="@+id/create_alias_certificate_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:inputType="text" />
            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_signed_package_certificate_state" />
                
                <EditText
                    android:id="@+id/create_alias_certificate_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:inputType="text" />
            </TableRow>
            
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_signed_package_certificate_country" />
                
                <EditText
                    android:id="@+id/create_alias_certificate_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:inputType="text" />
            </TableRow>
        </TableLayout>
        
        <TextView
            android:id="@+id/create_key_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:textIsSelectable="true"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>