<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_keystore"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >
            
            <ImageButton
                android:id="@+id/create_keystore_file_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/create_keystore_file"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/create_keystore_file"
                android:contentDescription="@string/export_signed_package_keystore_file"
                android:scaleType="centerInside"
                android:src="@drawable/ic_folder_white" />
            
            <EditText
                android:id="@id/create_keystore_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/create_keystore_file_select"
                android:hint="@string/export_signed_package_keystore_file"
                android:inputType="textUri" />
        </RelativeLayout>
        
        <EditText
            android:id="@+id/create_keystore_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/export_signed_package_keystore_password"
            android:inputType="textPassword" />
        
        <EditText
            android:id="@+id/create_keystore_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/export_signed_package_keystore_password_confirm"
            android:inputType="textPassword" />
        
        <TextView
            android:id="@+id/create_keystore_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:textIsSelectable="true"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>