...
	<string name="editor_menu_comp_select_wallpaper">Wallpaper</string>
	<string name="editor_menu_comp_select_watchface">Watchface</string>
	<string name="editor_menu_comp_select_vr">VR</string>
	<string name="editor_menu_comp_select_preview">Preview</string>
	<string name="editor_menu_undo">Undo</string>
	<string name="editor_menu_redo">Redo</string>
	<string name="editor_menu_tools">Tools</string>
	<string name="editor_menu_new_sketch">New Sketch</string>
	<string name="editor_menu_rename_sketch">Rename Sketch</string>
	<string name="editor_menu_duplicate_sketch">Duplicate Sketch</string>
	<string name="editor_menu_delete_sketch">Delete Sketch</string>
	<string name="editor_menu_open_sketch_properties">Sketch Properties</string>
	<string name="editor_menu_copy_to_sketchbook">Copy to Sketchbook</string>
...
	<string name="export_signed_package_keystore_password">Keystore Password</string>
	<string name="export_signed_package_keystore_password_confirm">Confirm Keystore Password</string>
	<string name="export_signed_package_key_alias">Key Alias</string>
	<string name="export_signed_package_key_alias_new">Create Key</string>
	<string name="export_signed_package_key_alias_password">Key Password</string>
	<string name="export_signed_package_key_alias_password_confirm">Confirm Key Password</string>
	<string name="export_signed_package_export">Export</string>
	<string name="export_signed_package_no_aliases">Alias (Keystore empty)</string>
	<string name="export_signed_package_certificate_validity">Validity (years):</string>
	<string name="export_signed_package_certificate_name">First and Last Name:</string>
	<string name="export_signed_package_certificate_organizational_unit">Organizational Unit:</string>
	<string name="export_signed_package_certificate_organization">Organization:</string>
	<string name="export_signed_package_certificate_city">City or Locality:</string>
...
